--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 		   <img src="img/chapter1/page03.png" alt="Глава 1 Страница 3">
 		    <img src="img/chapter1/page04.png" alt="Глава 1 Страница 4">
 			 <img src="img/chapter1/page05.png" alt="Глава 1 Страница 5">
-			  <img src="img/chapter1/page06.png" alt="Глава 1 Страница 6">
+			  <img src="img/chapter1/Page06.png" alt="Глава 1 Страница 6">
 			   <img src="img/chapter1/page07.png" alt="Глава 1 Страница 7">
-			    <img src="img/chapter1/page08.png" alt="Глава 1 Страница 8">
-				 <img src="img/chapter1/page09.png" alt="Глава 1 Страница 9">
-				  <img src="img/chapter1/page10.png" alt="Глава 1 Страница 10">
+			    <img src="img/chapter1/Page08.png" alt="Глава 1 Страница 8">
+				 <img src="img/chapter1/Page09.png" alt="Глава 1 Страница 9">
+				  <img src="img/chapter1/Page10.png" alt="Глава 1 Страница 10">
 				   <img src="img/chapter1/page11.png" alt="Глава 1 Страница 11">
 				    <img src="img/chapter1/page12.png" alt="Глава 1 Страница 12">
 					 <img src="img/chapter1/page13.png" alt="Глава 1 Страница 13">
@@ -44,3 +44,4 @@
     </footer>
 </body>
 </html>
+
